# manta

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
examples/: CMakeLists.txt
examples/connect_demo/: config.py  craft.py
examples/ex0_free_flight/: craft.py  ex0.cpp  keyboard_controller.py  smoke_test.py  viewer.py
examples/ex10_cpp_ekf/: craft.hpp  main.cpp
examples/ex10_multi_craft/: craft.py
examples/ex11_spinning_top/: README.md  ex11.cpp
examples/ex11_tethered_pair/: craft.py
examples/ex1_orbit/: README.md  config.py  controller.py  craft.py  ex1.cpp  viewer.py
examples/ex2_quadcopter/: README.md  config.py  craft.py  ex2.cpp  keyboard_controller.py  main.cpp  viewer.py
examples/ex3_tvc_rocket/: config.py  craft.py  ex3.cpp  keyboard_controller.py  main.cpp  viewer.py
examples/ex4_reaction_wheel/: config.py  craft.py  smoke_test.py
examples/ex5_estimator_demo/: config.py  craft.py  est_craft.py  ex5.cpp  ex5.py  smoke_test.py  viewer.py
examples/ex5_underwater/: craft.py  smoke_test.py
examples/ex6_estimator_demo/: craft.py  est_craft.py  ex6.cpp  smoke_test.py  viewer.py
examples/ex6_real_data_estimator/: config.py  est_craft.py  ex6.cpp  fake_sensors.py  smoke_test.py
examples/ex7_real_data_estimator/: est_craft.py  ex7.cpp  fake_sensors.py  smoke_test.py
examples/ex7_tethered_pair/: config.py  craft.py
examples/ex8_submarine/: config.py  ex8.py  smoke_test.py
examples/ex8_swarm/: craft.py  ex8.cpp  smoke_test.py
examples/ex9_bindings_demo/: craft.py
examples/ex9_dual_craft/: config.py
examples/generic_estimator_demo/: main.cpp
examples/shared/: sim_loop.hpp  state_codec.hpp
examples/sync_smoke/: sync_smoke.cpp
examples/ukf_smoke/: config.py  craft.py
examples/wire_debug/: wire_debug.cpp
include/manta/control/: pid.hpp
include/manta/core/: articulated_part.hpp  composite_part.hpp  craft.hpp  features.hpp  frame.hpp  frame_id.ipp  harness.hpp  noise.hpp  noise_registry.hpp  part.hpp  planet.hpp  root_part.hpp  scene.hpp  types.hpp  world.hpp  wrench.hpp
include/manta/coupling/: tether.hpp
include/manta/estimation/: block_decomposed_ekf.hpp  craft_ekf.hpp  craft_ukf.hpp  craft_view.hpp  ekf.hpp  generic_ekf.hpp  generic_ukf.hpp  manifold.hpp  measurement.hpp  parameter_fit.hpp  reading.hpp  state_spec.hpp  ukf.hpp  world_ekf.hpp  world_ekf_block.hpp  world_ukf.hpp
include/manta/fields/: collision_field.hpp  field.hpp  fluid_field.hpp  gravity_field.hpp  mag_field.hpp  ocean_atmos_field.hpp  point_gravity_field.hpp  sea_surface.hpp  templated_query.hpp  uniform_fluid_field.hpp
include/manta/geom/: casts.hpp  kinematic_link.hpp  mat3.hpp  ori.hpp  static_link.hpp  vec3.hpp
include/manta/parts/actuator/: gimbaled_thruster.hpp  prop_thruster.hpp  thruster.hpp
include/manta/parts/aero/: naca00xx.hpp
include/manta/parts/articulation/: motor.hpp
include/manta/parts/coupling/: tether_endpoint.hpp
include/manta/parts/field_src/: collider.hpp  gravity_part.hpp  point_gravity_part.hpp  point_gravity_src.hpp
include/manta/planets/: earth.hpp
include/manta/sim/: rate_gate.hpp  sim_clock.hpp
include/mantapilot/core/: frame.hpp  types.hpp  wrench.hpp
include/mantapilot/geom/: kinematic_link.hpp  mat3.hpp  ori.hpp  static_link.hpp  vec3.hpp
prompts/: estimation_workflow.md  examples_prompt.txt  manta_plan.md  more_thoughts.txt  my_prompt.txt  plan.md  planets.md  stock_parts.txt  thoughts.txt
python/manta_codegen/: pyproject.toml
python/manta_codegen/scripts/: emit_signal_sync_test.py
python/manta_codegen/src/manta_codegen/: __init__.py  _format.py  bindings.py  cli.py  core.py  manifest.py  signal.py
python/manta_codegen/src/manta_codegen/emit/: __init__.py  _util.py  cmake.py  config.py  craft.py  ekf_main.py  ekf_state_spec.py  main.py  real_data_main.py  sim_ekf_main.py  telemetry.py  ukf_state_spec.py
python/manta_codegen/src/manta_codegen/estimation/: __init__.py  ekf.py  ukf.py
python/manta_codegen/src/manta_codegen/fields/: __init__.py  collision_field.py  fluid_field.py  gravity_field.py  mag_field.py  ocean_atmos_field.py  point_gravity_field.py  uniform_fluid_field.py
python/manta_codegen/src/manta_codegen/parts/: __init__.py
python/manta_codegen/src/manta_codegen/parts/actuator/: __init__.py  gimbaled_thruster.py  prop_thruster.py  thruster.py
python/manta_codegen/src/manta_codegen/parts/aero/: __init__.py  naca00xx.py  surface.py
python/manta_codegen/src/manta_codegen/parts/articulation/: motor.py
python/manta_codegen/src/manta_codegen/parts/coupling/: tether_endpoint.py
python/manta_codegen/src/manta_codegen/parts/field_src/: __init__.py  collider.py  gravity_part.py  point_gravity_part.py  point_gravity_src.py
python/manta_codegen/src/manta_codegen/parts/sensor/: dvl.py  imu.py  magnetometer.py
python/manta_codegen/src/manta_codegen/parts/structure/: __init__.py  hull.py  mass.py  point_buoy.py  point_mass.py  surface.py
python/manta_codegen/src/manta_codegen/planets/: __init__.py  earth.py
python/manta_codegen/tests/: test_emit_bindings.py  test_signals.py  test_world.py
src/core/: articulated_part.cpp  composite_part.cpp  craft.cpp  frame.cpp  noise.cpp  part.cpp  scene.cpp  world.cpp
src/parts/articulation/: motor.cpp
tests/: CMakeLists.txt  test_airfoil_motor_coupling.cpp  test_articulation.cpp  test_bias_slice.cpp  test_collision_field.cpp  test_craft.cpp  test_craft_state.cpp  test_craft_view.cpp  test_ekf.cpp  test_ekf_against_sim.cpp  test_field.cpp  test_field_sync.cpp  test_field_templated.cpp  test_fluid.cpp  test_generic_ekf.cpp  test_generic_ukf.cpp  test_helpers.hpp  test_kinematic_link.cpp  test_main.cpp  test_manifold.cpp  test_mat3.cpp  test_measurement_e2e.cpp  test_naca00xx.cpp  test_noise.cpp  test_noise_registry.cpp  test_orbit.cpp  test_ori.cpp  test_parameter_fit.cpp  test_parts.cpp  test_planet.cpp  test_random_walk_bias.cpp  test_rate_gate.cpp  test_static_link.cpp  test_stock_parts.cpp  test_system_id.cpp  test_tether.cpp  test_ukf.cpp  test_vec3.cpp  test_world.cpp  test_wrench.cpp
(+8 files in other folders)
